Fix RTL layout issues with dangerous downloads under MD downloads.

See the bug for screenshots of the problem.

Change-Id: I1db68491c72833efd979696cc98359e1c59acdfb
Bug: 825848
Reviewed-on: https://chromium-review.googlesource.com/979194
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545979}
Former-commit-id: bf6e249fbaa8f2261e968bc51a9e49ce66a25b7c